fixed scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -28,13 +28,14 @@ a {
 }
 
 .container {
-
     width: 80%;
+    height: 500px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     gap: .5rem;
+    overflow-y: auto;
 }
 
 /* COLUMN AND CARD */
@@ -64,7 +65,7 @@ a {
 
 .tool-bar{
     width: 100%;
-    height: 100px;
+    min-height: 50px;
     background-color: rgba(56, 53, 53, 0.767);
     position: absolute;
     display: flex;
@@ -78,7 +79,7 @@ ul li {
     display: inline-block;
     list-style-type: none;
     color: white;
-    font-size: 1.5rem;
+    font-size: 1rem;
     padding: 0 .8rem;
 
 }
@@ -88,28 +89,31 @@ li:hover {
 }
 
 .center-menu, .cam  {
-    line-height: 100px;
+    line-height: 50px;
     
+}
+.cam {
+    width: 20%;
 }
 
 .end-call {
     width: 10%;
-    line-height: 100px;
+    line-height: 50px;
     text-align: center;
     background-color: rgb(96, 92, 92);
-    font-size: 1.5rem;
+    font-size: 1rem;
     color: red;
     font-weight: bold;
 }
 
 #share {
     color: green;
-    font-size: 2rem;
+    font-size: 1.2rem;
 }
 
 #angle-up {
-    font-size: .8rem;
-    padding: 0 .5rem;
+    font-size: .6rem;
+    padding: 0 .3rem;
 }
 
 .end-call:hover {
